<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backview"
    tools:context=".CourseActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layoutAds">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            >

            <Button
                android:id="@+id/btnCourse1"
                android:layout_width="match_parent"
                android:text="@string/course1"
                android:layout_height="25dp"
                android:background="@drawable/langage"
                android:scaleType="fitCenter"
                android:paddingLeft="20dp"
                android:textColor="@color/colorCourse"
                android:textSize="14sp"
                android:gravity="left|center_vertical"
                android:foreground="?android:attr/selectableItemBackground"
                />

            <Button
                android:id="@+id/btnCourse2"
                android:layout_width="match_parent"
                android:text="@string/course2"
                android:layout_height="25dp"
                android:background="@drawable/langage"
                android:scaleType="fitCenter"
                android:paddingLeft="20dp"
                android:textColor="@color/colorCourse"
                android:textSize="14sp"
                android:gravity="left|center_vertical"
                android:layout_marginTop="10dp"
                android:foreground="?android:attr/selectableItemBackground" />

            <Button
                android:id="@+id/btnCourse3"
                android:layout_width="match_parent"
                android:text="@string/course3"
                android:layout_height="25dp"
                android:background="@drawable/langage"
                android:scaleType="fitCenter"
                android:paddingLeft="20dp"
                android:textColor="@color/colorCourse"
                android:textSize="14sp"
                android:gravity="left|center_vertical"
                android:layout_marginTop="10dp"
                android:foreground="?android:attr/selectableItemBackground" />

            <Button
                android:id="@+id/btnCourse4"
                android:layout_width="match_parent"
                android:text="@string/course4"
                android:layout_height="25dp"
                android:background="@drawable/langage"
                android:scaleType="fitCenter"
                android:paddingLeft="20dp"
                android:textColor="@color/colorCourse"
                android:textSize="14sp"
                android:gravity="left|center_vertical"
                android:layout_marginTop="10dp"
                android:foreground="?android:attr/selectableItemBackground" />

            <Button
                android:id="@+id/btnCourse5"
                android:layout_width="match_parent"
                android:text="@string/course5"
                android:layout_height="25dp"
                android:background="@drawable/langage"
                android:scaleType="fitCenter"
                android:paddingLeft="20dp"
                android:textColor="@color/colorCourse"
                android:textSize="14sp"
                android:gravity="left|center_vertical"
                android:layout_marginTop="10dp"
                android:foreground="?android:attr/selectableItemBackground" />

            <Button
                android:id="@+id/btnCourse6"
                android:layout_width="match_parent"
                android:text="@string/course6"
                android:layout_height="25dp"
                android:background="@drawable/langage"
                android:scaleType="fitCenter"
                android:paddingLeft="20dp"
                android:textColor="@color/colorCourse"
                android:textSize="14sp"
                android:gravity="left|center_vertical"
                android:layout_marginTop="10dp"
                android:foreground="?android:attr/selectableItemBackground" />

            <Button
                android:id="@+id/btnCourse7"
                android:layout_width="match_parent"
                android:text="@string/course7"
                android:layout_height="25dp"
                android:background="@drawable/langage"
                android:scaleType="fitCenter"
                android:paddingLeft="20dp"
                android:textColor="@color/colorCourse"
                android:textSize="14sp"
                android:gravity="left|center_vertical"
                android:layout_marginTop="10dp"
                android:foreground="?android:attr/selectableItemBackground" />

            <Button
                android:id="@+id/btnCourse8"
                android:layout_width="match_parent"
                android:text="@string/course8"
                android:layout_height="25dp"
                android:background="@drawable/langage"
                android:scaleType="fitCenter"
                android:paddingLeft="20dp"
                android:textColor="@color/colorCourse"
                android:textSize="14sp"
                android:gravity="left|center_vertical"
                android:layout_marginTop="10dp"
                android:foreground="?android:attr/selectableItemBackground" />

            <Button
                android:id="@+id/btnCourse9"
                android:layout_width="match_parent"
                android:text="@string/course9"
                android:layout_height="25dp"
                android:background="@drawable/langage"
                android:scaleType="fitCenter"
                android:paddingLeft="20dp"
                android:textColor="@color/colorCourse"
                android:textSize="14sp"
                android:gravity="left|center_vertical"
                android:layout_marginTop="10dp"
                android:foreground="?android:attr/selectableItemBackground" />

            <Button
                android:id="@+id/btnCourse10"
                android:layout_width="match_parent"
                android:text="@string/course10"
                android:layout_height="25dp"
                android:background="@drawable/langage"
                android:scaleType="fitCenter"
                android:paddingLeft="20dp"
                android:textColor="@color/colorCourse"
                android:textSize="14sp"
                android:gravity="left|center_vertical"
                android:layout_marginTop="10dp"
                android:foreground="?android:attr/selectableItemBackground" />

            <Button
                android:id="@+id/btnCourse11"
                android:layout_width="match_parent"
                android:text="@string/course11"
                android:layout_height="25dp"
                android:background="@drawable/langage"
                android:scaleType="fitCenter"
                android:paddingLeft="20dp"
                android:textColor="@color/colorCourse"
                android:textSize="14sp"
                android:gravity="left|center_vertical"
                android:layout_marginTop="10dp"
                android:foreground="?android:attr/selectableItemBackground" />

            <Button
                android:id="@+id/btnCourse12"
                android:layout_width="match_parent"
                android:text="@string/course12"
                android:layout_height="25dp"
                android:background="@drawable/langage"
                android:scaleType="fitCenter"
                android:paddingLeft="20dp"
                android:textColor="@color/colorCourse"
                android:textSize="14sp"
                android:gravity="left|center_vertical"
                android:layout_marginTop="10dp"
                android:foreground="?android:attr/selectableItemBackground" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutAds"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorWhite">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/unitid"
            ads:layout_constraintLeft_toRightOf="parent"
            ads:layout_constraintRight_toLeftOf="parent"
            ads:layout_constraintBottom_toBottomOf="parent">
        </com.google.android.gms.ads.AdView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>