<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backview"
    tools:context=".LearningActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layoutAds">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="320dp"
            android:layout_height="450dp"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/testwaku2"
                >

                <ImageView
                    android:id="@+id/imgQ"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="25dp"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:id="@+id/txtQ"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="25dp"
                    android:background="@color/colorWhite"
                    android:text="@string/qtitle"
                    android:textSize="12sp"
                    android:textColor="@color/colorBlack"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:paddingLeft="5dp"
                    android:gravity="left|center_vertical"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/txtA1"
                        android:layout_width="160dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:paddingLeft="5dp"
                        android:background="@color/colorWhite"
                        android:text="@string/atitle1"
                        android:textSize="12sp"
                        android:textColor="@color/colorBlack"
                        android:gravity="center_vertical"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"/>

                    <Button
                        android:id="@+id/btnA1"
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/answer1"
                        android:textColor="@color/main_blue_color"
                        android:textSize="12sp"
                        android:background="@color/colorWhite"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/txtA1"
                        android:textAllCaps="false"
                        android:foreground="?android:attr/selectableItemBackground"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/txtA2"
                        android:layout_width="160dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:paddingLeft="5dp"
                        android:background="@color/colorWhite"
                        android:text="@string/atitle2"
                        android:textSize="12sp"
                        android:textColor="@color/colorBlack"
                        android:gravity="center_vertical"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"/>

                    <Button
                        android:id="@+id/btnA2"
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/answer2"
                        android:textColor="@color/main_blue_color"
                        android:textSize="12sp"
                        android:background="@color/colorWhite"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/txtA2"
                        android:textAllCaps="false"
                        android:foreground="?android:attr/selectableItemBackground"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/txtA3"
                        android:layout_width="160dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:paddingLeft="5dp"
                        android:background="@color/colorWhite"
                        android:text="@string/atitle3"
                        android:textSize="12sp"
                        android:textColor="@color/colorBlack"
                        android:gravity="center_vertical"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"/>

                    <Button
                        android:id="@+id/btnA3"
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/answer3"
                        android:textColor="@color/main_blue_color"
                        android:textSize="12sp"
                        android:background="@color/colorWhite"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/txtA3"
                        android:textAllCaps="false"
                        android:foreground="?android:attr/selectableItemBackground"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <Button
                        android:id="@+id/btnItem"
                        android:layout_width="160dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/colorTrans"
                        android:text="@string/totiembox"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"/>

                    <TextView
                        android:id="@+id/txtResult"
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@color/colorWhite"
                        android:text="@string/resultStr"
                        android:textColor="@color/colorRed"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/btnItem"
                        android:visibility="visible"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <Button
                        android:id="@+id/btnR1"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.2"
                        android:background="@color/colorTextSelect"
                        android:layout_margin="5dp"
                        android:text="@string/a1"
                        android:textSize="15sp"
                        android:textColor="@color/main_blue_color"
                        android:textAllCaps="false"
                        android:foreground="?android:attr/selectableItemBackground"/>

                    <Button
                        android:id="@+id/btnR2"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.2"
                        android:background="@color/colorTextSelect"
                        android:layout_margin="5dp"
                        android:text="@string/a2"
                        android:textSize="15sp"
                        android:textColor="@color/main_blue_color"
                        android:textAllCaps="false"
                        android:foreground="?android:attr/selectableItemBackground"/>

                    <Button
                        android:id="@+id/btnR3"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.2"
                        android:background="@color/colorTextSelect"
                        android:layout_margin="5dp"
                        android:text="@string/a3"
                        android:textSize="15sp"
                        android:textColor="@color/main_blue_color"
                        android:textAllCaps="false"
                        android:foreground="?android:attr/selectableItemBackground"/>

                    <Button
                        android:id="@+id/btnR4"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.2"
                        android:background="@color/colorTextSelect"
                        android:layout_margin="5dp"
                        android:text="@string/a4"
                        android:textSize="15sp"
                        android:textColor="@color/main_blue_color"
                        android:textAllCaps="false"
                        android:foreground="?android:attr/selectableItemBackground"/>

                    <Button
                        android:id="@+id/btnR5"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.2"
                        android:background="@color/colorTextSelect"
                        android:layout_margin="5dp"
                        android:text="@string/a5"
                        android:textSize="15sp"
                        android:textColor="@color/main_blue_color"
                        android:textAllCaps="false"
                        android:foreground="?android:attr/selectableItemBackground"/>

                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutGetItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="240dp"
                android:src="@drawable/itemget"
                android:scaleType="fitCenter"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutAds"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorWhite">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/unitid"
            ads:layout_constraintLeft_toRightOf="parent"
            ads:layout_constraintRight_toLeftOf="parent"
            ads:layout_constraintBottom_toBottomOf="parent">
        </com.google.android.gms.ads.AdView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>